--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-validator": "^0.14.2",
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
+    "nestjs-form-data": "^1.9.93",
     "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
