--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "google-auth-library": "^10.1.0",
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
     "nestjs-form-data": "^1.9.93",
